fix: add space between menu and photo on mobile

--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ main {
 
     main {
         margin-left: 0;
-        padding: 2em 0;
+        padding: 5em 0;
         box-sizing: border-box;
     }
 
